update new code

--- a/index.html
+++ b/index.html
@@ -7,17 +7,17 @@
     <title>🎂 Happy Birthday 🎂</title>
     <link rel="stylesheet" href="https://fonts.gstatic.com">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap">
-    <link rel="stylesheet" href="./assets/style.css">
+    <link rel="stylesheet" href="/assets/style.css">
 </head>
 <body>
     <div class="card">
-        <img src="./giphy (2).gif" alt="happy birthday" class="birthday">
+        <img src="/assets/giphy(2).gif" alt="happy birthday" class="birthday">
         <div class="text">
             <h1>🎂 Happy Birthday 🎂</h1>
             <p>Have a great future!...</p>
             <p>Ho Chi Khanh</p>
             <div class="credit">Make with <span style="color:tomato">❤ </span>by <a href="https://www.facebook.com/Narutocunung/">Khanh Hồ</a></div>
-            <img src="./cat-space-unscreen.gif" alt="">
+            <img src="/assets/cat-space-unscreen.gif" alt="">
         </div>
         <div class="space"></div>
     </div>
