--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>🎂 Happy Birthday 🎂</title>
     <link rel="stylesheet" href="https://fonts.gstatic.com">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap">
-    <link rel="stylesheet" href="/assets/style.css">
+    <link rel="stylesheet" href="./assets/style.css">
 </head>
 <body>
     <div class="card">
